--- a/csp-analyzer.html
+++ b/csp-analyzer.html
@@ -193,65 +193,61 @@
           </div>
 
 
-          <section class="card">
-            <div class="pad">
-              <div class="h1">Review CSP and Security Headers with Clear Findings</div>
-
-              <div class="muted" style="margin-top:10px">
-                This free online CSP analyzer parses directives, normalizes sources, and flags common misconfigurations that weaken protections against XSS, clickjacking, and injection paths. You can paste just a CSP header or an entire response header block; the tool extracts what it needs and generates severity-scored findings. Processing is local-only — no uploads and no server-side analysis.
-              </div>
-
-              <div class="hr"></div>
-
-              <div class="h1" style="font-size:16px">Common Use Cases</div>
-              <ul class="muted" style="margin-top:8px;line-height:1.6">
-                <li>Validate a CSP change before deploying to production</li>
-                <li>Quickly assess security posture during incident response or triage</li>
-                <li>Review third-party integrations for overly-broad allowlists</li>
-                <li>Generate a lightweight report for PRs, tickets, or audits</li>
-                <li>Check for missing headers like <span class="mono">X-Content-Type-Options</span>, <span class="mono">Referrer-Policy</span>, and <span class="mono">Permissions-Policy</span></li>
-              </ul>
-
-              <div class="hr"></div>
-
-              <div class="h1" style="font-size:16px">How It Works</div>
-              <div class="muted" style="margin-top:8px">
-                Input is parsed client-side. CSP directives are tokenized into sources/keywords, then evaluated against a ruleset to produce severity findings (High/Medium/Low/Info). If you paste full response headers, the analyzer also extracts and evaluates common security headers alongside CSP. The “Parsed” view shows normalized directive → token mapping so you can verify exactly what the browser would see.
-              </div>
-
-              <div class="hr"></div>
-
-              <div class="h1" style="font-size:16px">What It Flags</div>
-              <ul class="muted" style="margin-top:8px;line-height:1.6">
-                <li><span class="mono">'unsafe-inline'</span> and <span class="mono">'unsafe-eval'</span> in script/style policies</li>
-                <li>Wildcard / overly-broad sources and permissive defaults</li>
-                <li>Missing or weak <span class="mono">frame-ancestors</span> and hardening headers</li>
-                <li>Risky allowances for data/blob and unbounded third-party origins</li>
-                <li>Inconsistent directives that undermine the intended policy</li>
-              </ul>
-
-              <div class="hr"></div>
-
-              <div class="h1" style="font-size:16px">Frequently Asked Questions</div>
-
-              <div class="muted" style="margin-top:10px">
-                <strong>Does this tool upload my headers or CSP?</strong><br>
-                No. Analysis runs locally in your browser and nothing is sent to a backend.
-              </div>
-
-              <div class="muted" style="margin-top:10px">
-                <strong>Can I paste full response headers instead of only CSP?</strong><br>
-                Yes. Paste the header block and the analyzer will extract CSP and evaluate other common security headers.
-              </div>
-
-              <div class="muted" style="margin-top:10px">
-                <strong>Why are <span class="mono">'unsafe-inline'</span> / <span class="mono">'unsafe-eval'</span> flagged?</strong><br>
-                They weaken script/style restrictions and often enable injection paths. Prefer nonces/hashes and narrow sources.
-              </div>
-            </div>
-          </section>
+          
 
         </section>
+        <section class="card">
+          <div class="pad">
+            <div class="h1">Review CSP and Security Headers with Clear Findings</div>
+
+            <div class="muted" style="margin-top:10px">
+              This free online CSP analyzer parses <span class="mono">Content-Security-Policy</span> directives and common response security headers, normalizes sources, and flags patterns that weaken protections against XSS, clickjacking, and injection paths. Paste a CSP header or a full response header block and get severity-scored findings plus an exportable report — processing is local-only in your browser with no uploads.
+            </div>
+
+            <div class="hr"></div>
+
+            <div class="h2">Common Use Cases</div>
+            <ul class="list" style="margin-top:8px">
+              <li>Validate a CSP change before deploying to production</li>
+              <li>Quickly assess security posture during incident response or triage</li>
+              <li>Review third-party integrations for overly-broad allowlists</li>
+              <li>Generate a lightweight findings report for PRs, tickets, or audits</li>
+              <li>Check for missing headers like <span class="mono">X-Content-Type-Options</span>, <span class="mono">Referrer-Policy</span>, and <span class="mono">Permissions-Policy</span></li>
+            </ul>
+
+            <div class="hr"></div>
+
+            <div class="h2">How It Works</div>
+            <div class="muted" style="margin-top:8px">
+              Input is parsed client-side. CSP directives are tokenized into sources/keywords, whitespace is normalized, and each directive is evaluated against a ruleset to produce findings (High/Medium/Low/Info). If you paste full response headers, the analyzer extracts CSP and also evaluates other common hardening headers alongside it. The “Parsed” view shows normalized directives and token mapping so you can verify exactly what the browser would interpret.
+            </div>
+
+            <div class="hr"></div>
+
+            <div class="h2">What It Flags</div>
+            <ul class="list" style="margin-top:8px">
+              <li><span class="mono">'unsafe-inline'</span> and <span class="mono">'unsafe-eval'</span> in script/style policies</li>
+              <li>Wildcard / overly-broad sources and permissive defaults</li>
+              <li>Missing or weak <span class="mono">frame-ancestors</span> and other clickjacking protections</li>
+              <li>Risky allowlists (e.g., <span class="mono">data:</span>, <span class="mono">blob:</span>, unbounded third-party origins)</li>
+              <li>Inconsistent directives that undermine the intended policy</li>
+            </ul>
+
+            <div class="hr"></div>
+
+            <div class="h2">Frequently Asked Questions</div>
+
+            <div class="h3" style="margin-top:10px">Does this tool upload my headers or CSP?</div>
+            <div class="muted" style="margin-top:6px">No. Analysis runs locally in your browser and nothing is sent to a backend.</div>
+
+            <div class="h3" style="margin-top:10px">Can I paste full response headers instead of only CSP?</div>
+            <div class="muted" style="margin-top:6px">Yes. Paste the header block and the analyzer will extract CSP and evaluate other common security headers.</div>
+
+            <div class="h3" style="margin-top:10px">Why are <span class="mono">'unsafe-inline'</span> / <span class="mono">'unsafe-eval'</span> flagged?</div>
+            <div class="muted" style="margin-top:6px">They weaken script/style restrictions and can open injection paths. Prefer nonces/hashes and narrower sources.</div>
+          </div>
+        </section>
+
       </div>
     </main>
 
